--- a/732A90_Lab2.Rmd
+++ b/732A90_Lab2.Rmd
@@ -5,7 +5,7 @@ date: "11/14/2020"
 output: pdf_document
 ---
 
-```{r setup, include=FALSE, q2=TRUE}
+```{r setup, include=FALSE, q2=TRUE, echo=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 library(huxtable)
@@ -13,6 +13,8 @@ library(magrittr)
 ```
 
 ## 1. 
+
+Load data into global environment.
 
 ```{r data}
 load("data.RData")
@@ -102,3 +104,4 @@ pretty_df <-
 set_number_format(pretty_df, 5)
 
 ```
+
