--- a/732A90_Lab2.Rmd
+++ b/732A90_Lab2.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Question 2: Maximum Likelihood"
-author: "Tim Yuki Washio"
-date: "11/14/2020"
+title: "Computational Statistics: Lab 2"
+author: "Tim Yuki Washio & Nicolas Taba"
+date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: pdf_document
 ---
 
@@ -10,9 +10,96 @@ knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 library(huxtable)
 library(magrittr)
+library(ggplot2)
 ```
 
-## 1. 
+## Question 1: Optimizing parameters
+
+### 1
+
+We are asked to create a function that uses **optim()** to approximate a function using a piecewise quadratic function.
+
+```{r}
+interp_fn <- function(boundaries, par){
+  result <- c()
+  for (i in 1:length(boundaries)){
+    result[i] = c(par[1] + par[2] * boundaries[i] + (par[3] * boundaries[i]^2))
+  }
+  return(result)
+}
+min_se <- function(boundaries, par, target_fn){
+  t_f = target_fn(boundaries)
+  i_f = interp_fn(boundaries, par)
+  sse = sum((t_f - i_f)^2)
+  return(sse)
+}
+approximate <- function(boundaries, target_fn){
+  optimized <- optim(par=c(0,0,0), fn=min_se, target_fn=target_fn, boundaries=boundaries)
+  return(optimized$par)
+}
+
+```
+
+
+### 2
+
+Now we build a function such that it can make this approximation on an interval [0,1] by discretizing it into n intervals.
+
+```{r}
+approximate_cut <- function(n, fn){
+  interval <- seq(0, 1, length.out = n+1)
+  interval_targets = list()
+  for (i in 1:length(interval)) {
+    first_val = interval[i]
+    if (first_val == 1){stop}
+    else{
+      second_val = interval[i+1]
+      mid_val = interval[i] + ((second_val - first_val) / 2)
+      boundaries = c(first_val, mid_val, second_val)
+      interval_targets = append(interval_targets, list(approximate(boundaries, fn)))
+    }
+  }
+  return(interval_targets)
+}
+```
+
+
+### 3
+
+Finally, we assess our function on $f_1 = -x(1-x)$ and $f_2=-xsin(10\pi x)$
+
+```{r, echo=FALSE}
+f_1 <- function(x) {
+  y = -x * (1-x)
+  return(y)
+}
+f_2 <- function(x) {
+  y = -x * sin(10 * pi * x)
+  return(y)
+}
+approximation1 <- approximate_cut(100, f_1)
+x <- seq(0, 1, length.out = 101)
+
+plot1 <- plot(x, f_1(x), col = "red")
+for (i in 1: length(approximation1)){
+  x_1 <- seq((i*1/100 - 1/100), (1/100*i), by = 0.01/length(approximation1))
+  lines(x_1, sapply(x_1, interp_fn, par = approximation1[[i]]))
+}
+approximation2 <- approximate_cut(100, f_2)
+x <- seq(0, 1, length.out = 101)
+plot2 <- plot(x, f_2(x), col = "blue")
+for (i in 1: length(approximation1)){
+  x_2 <- seq((i*1/100 - 1/100), (1/100*i), by = 0.01/length(approximation1))
+  lines(x_2, sapply(x_2, interp_fn, par = approximation2[[i]]))
+}
+```
+
+
+The quadratic interpolation is good enough when we have intervals that are small enough for the optim function to find suitable parameters. It is difficult to notice a difference between the target function and our interpolated approximation.
+
+## Question 2: Maximizing likelihood
+
+### 1. 
 
 Load data into global environment.
 
@@ -20,7 +107,7 @@ Load data into global environment.
 load("data.RData")
 ```
 
-## 2.
+### 2.
 
 We define the log-likelihood function as the logarithm of the likelihood function:
 
@@ -56,7 +143,7 @@ sigma_hat = sqrt(sum((data-mu_hat)^2)/length(data))
 cat("mu_hat: ", mu_hat, "\nsigma_hat: ", sigma_hat)
 ```
 
-## 3.
+### 3.
 
 ```{r minus_log_likelihood, q2=TRUE}
 negative_log_likelihood <- function(param) {
@@ -84,7 +171,7 @@ bfgs_2 <- optim(par=c(0, 1), fn=negative_log_likelihood, gr=gradient, method="BF
 
 There could be issues of underflow if the difference in order of magnitude between the elements that are summed is too big. Maximizing the log-likelihood allows to prevent this issue, because very small and very large values can have comparable contributions to the sum.
 
-## 4.
+### 4.
 
 ```{r converge, q2=TRUE, echo=FALSE}
 algorithms = rbind("CG", "CG", "BFGS", "BFGS")
@@ -107,3 +194,10 @@ set_number_format(pretty_df, 5)
 ```
 
 All algorithms converged. The optimal values of parameters are pretty similar to the ones we calculated earlier. We would recommend to use the BFGS algorithm since we observed less computations while getting the same result. 
+
+\newpage
+
+## Appendix: All code for this report
+
+```{r ref.label=knitr::all_labels(), echo=TRUE, eval=FALSE}
+```
